--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,38 @@
-theme: jekyll-theme-cayman
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Dave's Tech Ramblings
+email: blog@dave-albert.com
+description: > # this means to ignore newlines until "baseurl:"
+    Hi I'm dave albert the CTO of [One15](https://one15.co) . I love all thing dev and ops.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://blog.dave-albert.com/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: dave_albert
+github_username:  davealbert
+
+# Build settings
+markdown: kramdown
+permalink: pretty
+theme: minima
+sass:
+  sass_dir: _sass
+include: ['_pages']
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
+kramdown:
+  input: GFM
