--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: blog@dave-albert.com
 description: > # this means to ignore newlines until "baseurl:"
     Hi I'm dave albert the CTO of [One15](https://one15.co). I love all thing dev and ops.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://dave-albert.com/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dave-albert.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dave_albert
 github_username:  davealbert
 
