--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,6 +1,6 @@
- - title: National Analytics Conferance Ireland, and AWS User group.
-   subtitle: Talking about the the search for a new data person, story telling and Terraform.
-   summary: "This episode I talk about attending the National Analytics Conferance Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+ - title: National Analytics Conference Ireland, and AWS User group.
+   subtitle: Talking about the search for a new data person, story telling and Terraform.
+   summary: "This episode I talk about attending the National Analytics Conference Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/005-Dave-Albert-Show.mp3
    date: Tue, 21 Nov 2017 09:10:00 GMT
    duration: 34:07
