--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,11 @@
+ - title: Dublin Indie Hackers no. 3 - with Courtland Allen and John Collison @ Stripe
+   subtitle: Takeaways from a Fireside Chat with Indie Hackers founder Courtland Allen and Stripe co-founder John Collison
+   summary: "The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/006-Dave-Albert-Show.mp3
+   date: Fri, 09 Nov 2018 05:14:00 GMT
+   duration: 21:24
+   length: 19967326
+
  - title: National Analytics Conference Ireland, and AWS User group.
    subtitle: Talking about the search for a new data person, story telling and Terraform.
    summary: "This episode I talk about attending the National Analytics Conference Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
