--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,11 @@
+- title: QT: What is a "Quick Take"?
+   subtitle: Introduction to my quick takes
+   summary: "QT: Quick takes are short bitsized segments of content based around a single topic. Findout about my reasoning here.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-What-Is-It.mp3
+   date: Sun, 11 Nov 2018 11:11:11 GMT
+   duration: 3:57
+   length: 372158
+
  - title: Dublin Indie Hackers no. 3 - with Courtland Allen and John Collison @ Stripe
    subtitle: Takeaways from a Fireside Chat with Indie Hackers founder Courtland Allen and Stripe co-founder John Collison
    summary: "The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
