--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,6 +1,6 @@
  - title: "QT: Why Medit chose Native Mobile Applications over a hybrid like React Native"
    subtitle: "We chose native mobile applications at Medit, what would you choose?"
-   summary: "QT: What would you chose native mobile applications or a hybrid app like React Native? We chose native this episode explains my reasoning. https://medit.online chose MongoDB as our main datastore? Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+   summary: "QT: What would you chose native mobile applications or a hybrid app like React Native? We chose native this episode explains my reasoning.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-003-Native-Apps.mp3
    date: Tue, 13 Nov 2018 04:45:54 GMT
    duration: 8:16
