QT-004-Delivery-Mindset.mp3 QT-005-Speed-Kills.mp3

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,19 @@
+ - title: "QT: Speed Kills"
+   subtitle: "A quick take on why moving to fast can be a problem."
+   summary: "A startup needs to move quickly, but sometimes we sometimes try to move so vast that we cost ourselves more time fixing what we broke. Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-005-Speed-Kills.mp3
+   date: Tue, 14 Nov 2018 04:46:54 GMT
+   duration: 7:27
+   length: 6264723
+
+ - title: "QT: Changing to a delivery mindset"
+   subtitle: "Quick take on changing your mindset from development to delivery."
+   summary: "We changed our mindset to be more deliver focused and had good results.  We've come a long way, and still have a long way to go.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-004-Delivery-Mindset.mp3
+   date: Tue, 14 Nov 2018 04:45:54 GMT
+   duration: 15:05
+   length: 12672778
+
  - title: "QT: Why Medit chose Native Mobile Applications over a hybrid like React Native"
    subtitle: "We chose native mobile applications at Medit, what would you choose?"
    summary: "QT: What would you chose native mobile applications or a hybrid app like React Native? We chose native this episode explains my reasoning.  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
