QT-006-Jupyter-Notebooks-and-ijavascript

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,11 @@
+ - title: "QT: Jupyter notebooks and IJavascript"
+   subtitle: "Jupyter notebooks aren't just for Machine Learning (ML)/Artificial Intelligence (AI), and using javascript with them"
+   summary: "QT: How I use Jupyter notebooks, and how to use javascript with them -- more about Jupyter here: https://jupyter.org/  and more about IJavascript here: http://n-riesco.github.io/ijavascript/  Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-006-Jupyter-Notebooks-and-ijavascript.mp3
+   date: Thu, 15 Nov 2018 04:30:54 GMT
+   duration: 10.19
+   length: 6810818
+
  - title: "QT: Speed Kills"
    subtitle: "A quick take on why moving to fast can be a problem."
    summary: "A startup needs to move quickly, but sometimes we sometimes try to move so vast that we cost ourselves more time fixing what we broke. Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
