--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,21 @@
+ - title: "Guest Dermot Casey | NDRC, Startups, Accelerator Programmes"
+   subtitle: "Dermot Casey and I discussing the NDRC, startups and accelerator programmes"
+   summary: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.
+
+   You can find Dermot on LinkedIn at https://www.linkedin.com/in/dermotcasey/
+   "
+   encoded: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.
+
+   <br/>
+   <br/>
+   You can find Dermot on LinkedIn at https://www.linkedin.com/in/dermotcasey/
+   "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/009-Dermot-Casey.mp3
+   date: Mon, 21 Nov 2018 04:30:54 GMT
+   duration: 46:47
+   length: 34500389
+   transcript: "009"
+
  - title: "Guest Rob Healy | Agile/Lean Startups"
    subtitle: "Rob Healy and I discussing agile and lean in startups."
    summary: "I sat down with Rob Healy of Ammeon who is a co-organizer of the Agile-Lean Ireland group.  We discussed how startups and other orginisations can use Agile and Lean to do more faster.
