--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,15 +1,7 @@
  - title: "Guest Dermot Casey | NDRC, Startups, Accelerator Programmes"
    subtitle: "Dermot Casey and I discussing the NDRC, startups and accelerator programmes"
-   summary: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.
-
-   You can find Dermot on LinkedIn at https://www.linkedin.com/in/dermotcasey/
-   "
-   encoded: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.
-
-   <br/>
-   <br/>
-   You can find Dermot on LinkedIn at https://www.linkedin.com/in/dermotcasey/
-   "
+   summary: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.  You can find Dermot on LinkedIn at https://www.linkedin.com/in/dermotcasey/ "
+   encoded: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.  <br/> <br/> You can find Dermot on LinkedIn at https://www.linkedin.com/in/dermotcasey/ "
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/009-Dermot-Casey.mp3
    date: Mon, 21 Nov 2018 04:30:54 GMT
    duration: 46:47
@@ -18,27 +10,8 @@
 
  - title: "Guest Rob Healy | Agile/Lean Startups"
    subtitle: "Rob Healy and I discussing agile and lean in startups."
-   summary: "I sat down with Rob Healy of Ammeon who is a co-organizer of the Agile-Lean Ireland group.  We discussed how startups and other orginisations can use Agile and Lean to do more faster.
-
-A bit about Rob
-
-Rob is a principal consultant with Ammeon where he provides agile and lean training, coaching and consulting services to startups, SMEs and enterprise clients. A qualified mechanical engineer and MBA, he has worked to develop and improve products and services for the nuclear industry, formula one teams, telcos and antivirus companies.In his spare time, he organises the Agile-Lean Ireland Meetup group that hosts technology meetups for Scrum Masters and Agile and Lean Coaches once a month.
-
-About Ammeon
-
-Ammeon is an Irish owned Training, Consulting and IT Professional Services company. From Understanding the Fundamentals of Agile-Lean, to Operating IT Software in Production, our training services are designed to improve and fast-track your organisation's journey. We can custom-designed our courses to meet our client's specific needs and provide coaching assistance to help them integrate new processes and technologies into their working environment. Ammeon is listed on Enterprise Ireland's Lean Service Providers list and also on their Lean Education Directory."
-   encoded: "I sat down with Rob Healy of Ammeon who is a co-organizer of the Agile-Lean Ireland group.  We discussed how startups and other orginisations can use Agile and Lean to do more faster.
-
-<br />
-A bit about Rob
-<br />
-Rob is a principal consultant with Ammeon where he provides agile and lean training, coaching and consulting services to startups, SMEs and enterprise clients. A qualified mechanical engineer and MBA, he has worked to develop and improve products and services for the nuclear industry, formula one teams, telcos and antivirus companies.In his spare time, he organises the Agile-Lean Ireland Meetup group that hosts technology meetups for Scrum Masters and Agile and Lean Coaches once a month.
-
-<br />
-About Ammeon
-<br />
-Ammeon is an Irish owned Training, Consulting and IT Professional Services company. From Understanding the Fundamentals of Agile-Lean, to Operating IT Software in Production, our training services are designed to improve and fast-track your organisation's journey. We can custom-designed our courses to meet our client's specific needs and provide coaching assistance to help them integrate new processes and technologies into their working environment. Ammeon is listed on Enterprise Ireland's Lean Service Providers list and also on their Lean Education Directory.
-"
+   summary: "I sat down with Rob Healy of Ammeon who is a co-organizer of the Agile-Lean Ireland group.  We discussed how startups and other orginisations can use Agile and Lean to do more faster.  A bit about Rob Rob is a principal consultant with Ammeon where he provides agile and lean training, coaching and consulting services to startups, SMEs and enterprise clients. A qualified mechanical engineer and MBA, he has worked to develop and improve products and services for the nuclear industry, formula one teams, telcos and antivirus companies.In his spare time, he organises the Agile-Lean Ireland Meetup group that hosts technology meetups for Scrum Masters and Agile and Lean Coaches once a month.  About Ammeon Ammeon is an Irish owned Training, Consulting and IT Professional Services company. From Understanding the Fundamentals of Agile-Lean, to Operating IT Software in Production, our training services are designed to improve and fast-track your organisation's journey. We can custom-designed our courses to meet our client's specific needs and provide coaching assistance to help them integrate new processes and technologies into their working environment. Ammeon is listed on Enterprise Ireland's Lean Service Providers list and also on their Lean Education Directory."
+   encoded: "I sat down with Rob Healy of Ammeon who is a co-organizer of the Agile-Lean Ireland group.  We discussed how startups and other orginisations can use Agile and Lean to do more faster.  <br /> A bit about Rob <br /> Rob is a principal consultant with Ammeon where he provides agile and lean training, coaching and consulting services to startups, SMEs and enterprise clients. A qualified mechanical engineer and MBA, he has worked to develop and improve products and services for the nuclear industry, formula one teams, telcos and antivirus companies.In his spare time, he organises the Agile-Lean Ireland Meetup group that hosts technology meetups for Scrum Masters and Agile and Lean Coaches once a month.  <br /> About Ammeon <br /> Ammeon is an Irish owned Training, Consulting and IT Professional Services company. From Understanding the Fundamentals of Agile-Lean, to Operating IT Software in Production, our training services are designed to improve and fast-track your organisation's journey. We can custom-designed our courses to meet our client's specific needs and provide coaching assistance to help them integrate new processes and technologies into their working environment. Ammeon is listed on Enterprise Ireland's Lean Service Providers list and also on their Lean Education Directory.  "
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/007-Rob-Healy.mp3
    date: Tue, 20 Nov 2018 04:30:54 GMT
    duration: 50:52
