012-Ed-Burke.mp3

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "Guest Ed Burke | Starting up without a CTO"
+   subtitle: "Starting without a CTO and using Facebook groups to validate a startup idea"
+   summary: "Ed Burke of CEO and founder of RooMigo and I discuss starting up without a CTO, and using Facebook groups to validate a startup idea. | </br /> ed@roomigo.io | https://roomigo.io/ | https://www.linkedin.com/in/ed-burke/ | https://www.linkedin.com/company/roomigo/ | https://twitter.com/BurkeyEd | https://twitter.com/roomigohq"
+   encoded: "Ed Burke of CEO and founder of RooMigo and I discuss starting up without a CTO, and using Facebook groups to validate a startup idea. <br /></br /> ed@roomigo.io <br />https://roomigo.io/ <br />https://www.linkedin.com/in/ed-burke/ <br />https://www.linkedin.com/company/roomigo/ <br /> <br />https://twitter.com/BurkeyEd <br />https://twitter.com/roomigohq"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/012-Ed-Burke.mp3
+   date: Sun, 24 Nov 2018 04:30:54 GMT
+   duration: 41:12
+   length: 39551058
+   transcript: "012"
+
  - title: "Guest Jake Cahill | Web Scrapping Automation Bots and AI"
    subtitle: "Is web scrapping ethical, how can it go wrong?"
    summary: "Jake and I discuss technology using in web scrapping and scrapping prevention using AI/ML | https://twitter.com/tech_ccs | https://www.linkedin.com/in/jake-cahill-maine/ | https://www.ccstechme.com/ | https://dev.to/kaelscion"
