013-Dave-Denham.mp3

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "Guest Dave Denham | Agile, Lean, Scrum, Kanban"
+   subtitle: "What is a conference MVP?"
+   summary: "Dave Denham and I discuss building software using Agile, Lean, Scrum, and the Agile Lean Ireland conference | https://twitter.com/cobrakaiagile | https://www.linkedin.com/in/ddenham/ | https://www.agileleanireland.org/ | https://twitter.com/AgileLeanIrl"
+   encoded: "Dave Denham and I discuss building software using Agile, Lean, Scrum, and the Agile Lean Ireland conference <br /> <br />https://twitter.com/cobrakaiagile <br />https://www.linkedin.com/in/ddenham/ <br />https://www.agileleanireland.org/ <br />https://twitter.com/AgileLeanIrl"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/013-Dave-Denham.mp3
+   date: Mon, 24 Nov 2018 04:30:54 GMT
+   duration: 1:06:26
+   length: 63776390
+   transcript: "013"
+
  - title: "Guest Ed Burke | Starting up without a CTO"
    subtitle: "Starting without a CTO and using Facebook groups to validate a startup idea"
    summary: "Ed Burke of CEO and founder of RooMigo and I discuss starting up without a CTO, and using Facebook groups to validate a startup idea. | </br /> ed@roomigo.io | https://roomigo.io/ | https://www.linkedin.com/in/ed-burke/ | https://www.linkedin.com/company/roomigo/ | https://twitter.com/BurkeyEd | https://twitter.com/roomigohq"
