014-Will-Youmans-auphonic rss

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "Guest Will Youmans | No CTO, no problem ... sort of"
+   subtitle: "Starting a tech product before you have a CTO and the transition using an interm CTOs"
+   summary: "Will Youmans founder of Forefront Software and CTO Sumo and I discuss how he helps founders without a CTO transition to having one with his new private Beta service CTO Sumo | https://twitter.com/wyoumansdev | https://www.linkedin.com/in/williamyoumans/ | https://www.forefrontsoftware.com/ | https://www.ctosumo.com/ "
+   encoded: "Will Youmans founder of Forefront Software and CTO Sumo and I discuss how he helps founders without a CTO transition to having one with his new private Beta service CTO Sumo <br /> https://twitter.com/wyoumansdev <br /> https://www.linkedin.com/in/williamyoumans/ <br /> https://www.forefrontsoftware.com/ <br /> https://www.ctosumo.com/ "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/014-Will-Youmans-auphonic.mp3
+   date: Mon, 30 Nov 2018 04:30:54 GMT
+   duration: 46:37
+   length: 28789144
+   transcript: "014"
+
  - title: "Guest Dave Denham | Agile, Lean, Scrum, Kanban"
    subtitle: "What is a conference MVP?"
    summary: "Dave Denham and I discuss building software using Agile, Lean, Scrum, and the Agile Lean Ireland conference | https://twitter.com/cobrakaiagile | https://www.linkedin.com/in/ddenham/ | https://www.agileleanireland.org/ | https://twitter.com/AgileLeanIrl"
