QT-007-Slack-vs-Trello && QT-008-Starting-with-purpose

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,23 @@
+ - title: "QT: Starting with purpose"
+   subtitle: "Qetting started is the most important thing, also focus on the purpose"
+   summary: "QT: How I went from not posting a new episode in a year to several per week"
+   encoded: "QT: How I went from not posting a new episode in a year to several per week"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-008-Starting-with-purpose.mp3
+   date: Sun, 2 Dec 2018 04:37:54 GMT
+   duration: 14:14
+   length: 3668936
+   transcript: "QT-008"
+
+ - title: "QT: Slack and Trello"
+   subtitle: "Great tools, if you use them as they should be used."
+   summary: "QT: We use both Slack and Trello, not always as they should be used.  I talk a bout how this causes unneeded stress on distraction within the team. "
+   encoded: "QT: We use both Slack and Trello, not always as they should be used.  I talk a bout how this causes unneeded stress on distraction within the team. "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-007-Slack-vs-Trello.mp3
+   date: Sun, 2 Dec 2018 04:27:54 GMT
+   duration: 13:34
+   length: 13039071
+   transcript: "QT-007"
+
  - title: "Guest Will Youmans | No CTO, no problem ... sort of"
    subtitle: "Starting a tech product before you have a CTO and the transition using an interm CTOs"
    summary: "Will Youmans founder of Forefront Software and CTO Sumo and I discuss how he helps founders without a CTO transition to having one with his new private Beta service CTO Sumo | https://twitter.com/wyoumansdev | https://www.linkedin.com/in/williamyoumans/ | https://www.forefrontsoftware.com/ | https://www.ctosumo.com/ "
