--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "Guest Alan Costell | NDRC Venture Investment Leader (VIL) of Medit and many more startups"
+   subtitle: "Alan and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success"
+   summary: "Alan Costello an NDRC Venture Investment Leader (VIL) of Medit and many more startups and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success | https://www.linkedin.com/in/alanjcostello/ | https://twitter.com/alanjcostello | https://www.ndrc.ie/ |https://twitter.com/ndrc_hq "
+   encoded: "Alan Costello an NDRC Venture Investment Leader (VIL) of Medit and many more startups and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success <br /> https://www.linkedin.com/in/alanjcostello/ <br /> https://twitter.com/alanjcostello <br /> https://www.ndrc.ie/ <br />https://twitter.com/ndrc_hq "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/015-Alan-Costello.mp3
+   date: Mon, 3 Dec 2018 04:30:54 GMT
+   duration: "1:00:58"
+   length: 50131069
+   transcript: "015"
+
  - title: "QT: Starting with purpose"
    subtitle: "Qetting started is the most important thing, also focus on the purpose"
    summary: "QT: How I went from not posting a new episode in a year to several per week"
