--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -9,7 +9,7 @@
    transcript: "015"
 
  - title: "QT: Starting with purpose"
-   subtitle: "Qetting started is the most important thing, also focus on the purpose"
+   subtitle: "Getting started is the most important thing, also focus on the purpose"
    summary: "QT: How I went from not posting a new episode in a year to several per week"
    encoded: "QT: How I went from not posting a new episode in a year to several per week"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-008-Starting-with-purpose.mp3
