--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -21,8 +21,8 @@
 
  - title: "QT: Slack and Trello"
    subtitle: "Great tools, if you use them as they should be used."
-   summary: "QT: We use both Slack and Trello, not always as they should be used.  I talk a bout how this causes unneeded stress on distraction within the team. "
-   encoded: "QT: We use both Slack and Trello, not always as they should be used.  I talk a bout how this causes unneeded stress on distraction within the team. "
+   summary: "QT: We use both Slack and Trello, not always as they should be used.  I talk about how this causes unneeded stress and distraction within the team. "
+   encoded: "QT: We use both Slack and Trello, not always as they should be used.  I talk about how this causes unneeded stress and distraction within the team. "
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-007-Slack-vs-Trello.mp3
    date: Sun, 2 Dec 2018 04:27:54 GMT
    duration: 13:34
