fix instagram posts

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ instagram_items:
     - BqOvg1tgguy
     - BoRZpaMgK5S
     - BiHpQs7AjV7
+    - BQdBmfnhMy-
+    - BNM6RTrjsWU
+    - BDOZlQerxki
+    - BCcgSWKrxki
 
 # Build settings
 markdown: kramdown
