016-Back-From-Break.mp3

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "Back from the Holiday break"
+   subtitle: "Some learnings from our company meetup, scaling down social media, CosmosDB"
+   summary: "Some learnings from our company meetup, scaling down social media, CosmosDB. What if...? What to remove? Better us of my time, and some learnings of using CosmosDB in a new project."
+   encoded: "Some learnings from our company meetup, scaling down social media, CosmosDB. What if...? What to remove? Better us of my time, and some learnings of using CosmosDB in a new project."
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/016-Back-From-Break.mp3
+   date: Thu, 17 Jan 2019 04:30:54 GMT
+   duration: "31:58"
+   length: 31761135
+   transcript: "016"
+
  - title: "Guest Alan Costell | NDRC Venture Investment Leader (VIL) of Medit and many more startups"
    subtitle: "Alan and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success"
    summary: "Alan Costello an NDRC Venture Investment Leader (VIL) of Medit and many more startups and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success | https://www.linkedin.com/in/alanjcostello/ | https://twitter.com/alanjcostello | https://www.ndrc.ie/ |https://twitter.com/ndrc_hq "
